@@ -1,9 +1,9 @@
 package com.example.spendolive.payment.controller;
 
-
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import java.util.List;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
@@ -19,6 +19,7 @@ import com.example.spendolive.ott.domain.OttRoomDTO;
 import com.example.spendolive.ott.domain.OttRoomMemberDTO;
 import com.example.spendolive.ott.domain.OttSettlementDTO;
 import com.example.spendolive.payment.domain.PaymentAjaxResponse;
+import com.example.spendolive.payment.domain.PaymentAmountDTO;
 import com.example.spendolive.payment.domain.SettlementPaymentVO;
 import com.example.spendolive.payment.exception.PaymentProcessException;
 import com.example.spendolive.payment.service.PaymentService;
@@ -29,14 +30,19 @@ import jakarta.servlet.http.HttpSession;
 @Controller("AdminPaymentController")
 @RequestMapping(value="/admin/settlement")
 public class AdminPaymentControllerImpl implements AdminPaymentController{
-    @Autowired
-    private PaymentService paymentService;
+    private static final Logger log = LoggerFactory.getLogger(AdminPaymentControllerImpl.class);
+
+    private final PaymentService paymentService;
+
+    public AdminPaymentControllerImpl(PaymentService paymentService) {
+        this.paymentService = paymentService;
+    }
     @Override
     @GetMapping("/list.do")
-    public ModelAndView listUpSettlement(@RequestParam(value = "status", required = false) String status,HttpServletRequest request, HttpServletResponse response, HttpSession session, RedirectAttributes redirectAttributes) throws Exception {
+    public ModelAndView listUpSettlement(@RequestParam(value = "status", required = false) String status, HttpServletRequest request, HttpServletResponse response, HttpSession session, RedirectAttributes redirectAttributes) throws Exception {
         session = request.getSession();
-        if(status==null){status = "READY";}
-        
+        if (status==null) {status = "READY";}
+
         try {
             List<OttRoomDTO> settlementList = paymentService.selectTodaysettlement(status);
             ModelAndView mav = layout("/WEB-INF/views/admin/settlement/settlement.jsp");
@@ -50,10 +56,10 @@ public class AdminPaymentControllerImpl implements AdminPaymentController{
     }
     @Override
     @GetMapping("/paymentlist.do")
-    public ModelAndView paymentlistUpSettlement(@RequestParam(value = "status", required = false) String status,HttpServletRequest request, HttpServletResponse response, HttpSession session, RedirectAttributes redirectAttributes) throws Exception {
+    public ModelAndView paymentlistUpSettlement(@RequestParam(value = "status", required = false) String status, HttpServletRequest request, HttpServletResponse response, HttpSession session, RedirectAttributes redirectAttributes) throws Exception {
         session = request.getSession();
-        if(status==null){status = "READY";}
-        
+        if (status==null) {status = "READY";}
+
         try {
             List<OttRoomMemberDTO> paymentList = paymentService.selectTodaysettlementmember(status);
             ModelAndView mav = layout("/WEB-INF/views/admin/settlement/payment.jsp");
@@ -67,10 +73,10 @@ public class AdminPaymentControllerImpl implements AdminPaymentController{
     }
     @Override
     @GetMapping("/paymentdetaillist.do")
-    public ModelAndView paymentdetaillistUpSettlement(@RequestParam(value = "status", required = false) String status,HttpServletRequest request, HttpServletResponse response, HttpSession session, RedirectAttributes redirectAttributes) throws Exception {
+    public ModelAndView paymentdetaillistUpSettlement(@RequestParam(value = "status", required = false) String status, HttpServletRequest request, HttpServletResponse response, HttpSession session, RedirectAttributes redirectAttributes) throws Exception {
         session = request.getSession();
-        if(status==null){status = "READY";}
-        
+        if (status==null) {status = "READY";}
+
         try {
             List<SettlementPaymentVO> paymentdetailList = paymentService.selectpaymentAll();
             ModelAndView mav = layout("/WEB-INF/views/admin/settlement/paymentdetail.jsp");
@@ -86,10 +92,10 @@ public class AdminPaymentControllerImpl implements AdminPaymentController{
     @PostMapping("/pay.do")
     public ResponseEntity<PaymentAjaxResponse> pay(@RequestParam("room_id") int room_id, HttpServletRequest request, HttpServletResponse response, HttpSession session, RedirectAttributes redirectAttributes) throws Exception {
         session = request.getSession();
-        
+
         try {
             String msg = paymentService.updateExcrow(room_id);
-            
+
             return ResponseEntity.ok(new PaymentAjaxResponse(
                     true,
                     "SETTLEMENT_COMPLETED",
@@ -109,7 +115,7 @@ public class AdminPaymentControllerImpl implements AdminPaymentController{
                             null));
 
         } catch (Exception e) {
-            e.printStackTrace();
+            log.error("관리자 결제 상태 조회 중 오류가 발생했습니다.", e);
             return ResponseEntity
                     .status(HttpStatus.INTERNAL_SERVER_ERROR)
                     .body(new PaymentAjaxResponse(
@@ -130,23 +136,23 @@ public class AdminPaymentControllerImpl implements AdminPaymentController{
     @Override
     @PostMapping("/paymenting.do")
     public ResponseEntity<PaymentAjaxResponse> payment(
-        @RequestParam("member_login_id") String member_login_id,@RequestParam("room_id") String room_idStr,
+        @RequestParam("member_login_id") String member_login_id, @RequestParam("room_id") String room_idStr,
             HttpServletRequest request, HttpServletResponse response,
             HttpSession session, RedirectAttributes redirectAttributes) throws Exception {
 
-
         int room_id = Integer.parseInt(room_idStr);
-        OttSettlementDTO settlementInfo = (OttSettlementDTO) paymentService.selectMySettlements(room_id);
-        int total_amount =  settlementInfo.getTotal_price();
-        int member_limit = settlementInfo.getMember_limit();
-        int base_amount = total_amount / member_limit;
-        int fee_amount = (base_amount / 100) * member_limit;
-        int total_price = base_amount + fee_amount; 
-        String host_id = settlementInfo.getHost_login_id();
-        int settlement_id = (int) settlementInfo.getSettlement_id().longValue();
 
         try {
-            paymentService.executeAutomaticPayment(member_login_id, total_price, room_id,fee_amount ,base_amount, settlement_id, host_id);
+            // 사용자 결제와 동일한 PaymentService 금액 계산 규칙(1/N + 플랫폼 수수료 3%)을 사용
+            PaymentAmountDTO paymentAmount = paymentService.getPaymentAmount(room_id);
+            paymentService.executeAutomaticPayment(
+                    member_login_id,
+                    paymentAmount.getTotalAmount(),
+                    room_id,
+                    paymentAmount.getFeeAmount(),
+                    paymentAmount.getBaseAmount(),
+                    paymentAmount.getSettlementId(),
+                    paymentAmount.getHostLoginId());
             return ResponseEntity.ok(new PaymentAjaxResponse(
                     true,
                     "PAYMENT_COMPLETED",
@@ -154,8 +160,7 @@ public class AdminPaymentControllerImpl implements AdminPaymentController{
                     "PAID",
                     null,
                     "/admin/settlement/paymentlist.do"));
-      
-            
+
         } catch (PaymentProcessException e) {
             return ResponseEntity
                     .status(resolveHttpStatus(e.getCode()))
@@ -168,7 +173,7 @@ public class AdminPaymentControllerImpl implements AdminPaymentController{
                             null));
 
         } catch (Exception e) {
-            e.printStackTrace();
+            log.error("관리자 결제 처리 중 오류가 발생했습니다.", e);
             return ResponseEntity
                     .status(HttpStatus.INTERNAL_SERVER_ERROR)
                     .body(new PaymentAjaxResponse(
@@ -183,12 +188,12 @@ public class AdminPaymentControllerImpl implements AdminPaymentController{
     @Override
     @PostMapping("/paymentlate.do")
     public ResponseEntity<PaymentAjaxResponse> paymentlate(
-        @RequestParam("member_login_id") String member_login_id ,@RequestParam("room_id") int room_id,@RequestParam("pay_late_day") int pay_late_day,
+        @RequestParam("member_login_id") String member_login_id , @RequestParam("room_id") int room_id, @RequestParam("pay_late_day") int pay_late_day,
             HttpServletRequest request, HttpServletResponse response,
             HttpSession session, RedirectAttributes redirectAttributes) throws Exception {
 
         try {
-            paymentService.updateTodaysettlementroommemberlate(room_id,member_login_id,pay_late_day);
+            paymentService.updateTodaysettlementroommemberlate(room_id, member_login_id, pay_late_day);
             return ResponseEntity.ok(new PaymentAjaxResponse(
                 true,
                 "LATEDAY_COMPLETED",
@@ -196,7 +201,7 @@ public class AdminPaymentControllerImpl implements AdminPaymentController{
                 "COMPLETE",
                 null,
                 "/admin/settlement/paymentlist.do"));
-            
+
         } catch (PaymentProcessException e) {
             return ResponseEntity
                     .status(resolveHttpStatus(e.getCode()))
@@ -209,7 +214,7 @@ public class AdminPaymentControllerImpl implements AdminPaymentController{
                             "/admin/settlement/paymentlist.do"));
 
         } catch (Exception e) {
-            e.printStackTrace();
+            log.error("관리자 결제 목록 처리 중 오류가 발생했습니다.", e);
             return ResponseEntity
                     .status(HttpStatus.INTERNAL_SERVER_ERROR)
                     .body(new PaymentAjaxResponse(
@@ -229,7 +234,7 @@ public class AdminPaymentControllerImpl implements AdminPaymentController{
             HttpSession session, RedirectAttributes redirectAttributes) throws Exception {
 
         try {
-            
+
             paymentService.executeRoomRefund(payment);
             return ResponseEntity.ok(new PaymentAjaxResponse(
                     true,
@@ -250,7 +255,7 @@ public class AdminPaymentControllerImpl implements AdminPaymentController{
                             "/admin/settlement/paymentdetaillist.do"));
 
         } catch (Exception e) {
-            e.printStackTrace();
+            log.error("관리자 결제 상세 처리 중 오류가 발생했습니다.", e);
             return ResponseEntity
                     .status(HttpStatus.INTERNAL_SERVER_ERROR)
                     .body(new PaymentAjaxResponse(
@@ -281,27 +286,37 @@ public class AdminPaymentControllerImpl implements AdminPaymentController{
     @GetMapping(value = "/status.do", produces = "application/json; charset=UTF-8")
     @ResponseBody
     public ResponseEntity<PaymentAjaxResponse> paymentStatus(
-            @RequestParam(value = "room_id", required = false) int room_id,
-            @RequestParam(value = "member_login_id", required = false) String member_login_id,
-            @RequestParam(value = "host_id", required = false) String host_id,
-            @RequestParam(value = "payment", required = false) SettlementPaymentVO payment,
+            @RequestParam(value = "room_id", required = false) Integer roomId,
+            @RequestParam(value = "member_login_id", required = false) String memberLoginId,
+            @RequestParam(value = "host_id", required = false) String hostId,
+            @RequestParam(value = "payment_id", required = false) Integer paymentId,
             HttpServletRequest request,
             HttpSession session) throws Exception {
-      // settlement_tb date들 다빼고 status랑 settlement_month 로만 사용
-      String paymentStatus = "";
-      int payment_id = payment.getPayment_id();
-      if (host_id != null && !host_id.trim().isEmpty()){
-        paymentStatus = paymentService.selectEscrowStatus(room_id, host_id); 
-      }else if(member_login_id != null && !member_login_id.trim().isEmpty()){ paymentStatus = paymentService.getRoomPaymentStatus(member_login_id, room_id);
-      }else {paymentStatus = paymentService.selectRefundStatus(payment_id);}
-      
+
+        String paymentStatus;
+        if (hostId != null && !hostId.isBlank()) {
+            if (roomId == null || roomId <= 0) {
+                return invalidStatusRequest("송금 상태를 확인할 방 정보가 없습니다.");
+            }
+            paymentStatus = paymentService.selectEscrowStatus(roomId, hostId);
+        } else if (memberLoginId != null && !memberLoginId.isBlank()) {
+            if (roomId == null || roomId <= 0) {
+                return invalidStatusRequest("결제 상태를 확인할 방 정보가 없습니다.");
+            }
+            paymentStatus = paymentService.getRoomPaymentStatus(memberLoginId, roomId);
+        } else if (paymentId != null && paymentId > 0) {
+            paymentStatus = paymentService.selectRefundStatus(paymentId);
+        } else {
+            return invalidStatusRequest("상태 확인에 필요한 결제 정보가 없습니다.");
+        }
+
         if (isPaidStatus(paymentStatus)) {
             return ResponseEntity.ok(new PaymentAjaxResponse(
                     true,
                     "PAYMENT_COMPLETED",
                     "결제가 완료된 것을 확인했습니다.",
                     paymentStatus,
-                    room_id,
+                    roomId,
                     null));
         }
 
@@ -316,9 +331,20 @@ public class AdminPaymentControllerImpl implements AdminPaymentController{
                         : "PAYMENT_NOT_COMPLETED",
                 message,
                 paymentStatus,
-                room_id,
+                roomId,
                 null));
     }
+
+    private ResponseEntity<PaymentAjaxResponse> invalidStatusRequest(String message) {
+        return ResponseEntity.badRequest().body(new PaymentAjaxResponse(
+                false,
+                "INVALID_PAYMENT_INFO",
+                message,
+                "FAILED",
+                null,
+                null));
+    }
+
     private boolean isPaidStatus(String paymentStatus) {
         return "PAID".equals(paymentStatus)
                 || "CONFIRMED".equals(paymentStatus);
